--- a/index.html
+++ b/index.html
@@ -2,71 +2,102 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://png.pngtree.com/png-clipart/20190628/original/pngtree-salon-and-spa-icon-png-image_4032180.jpg"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Optimized Title -->
     <title>Fillers, Botox & PRP i Solna, Stockholm | Dr. Hadde Beauty</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Dr. Hadde Beauty i Solna, Stockholm, erbjuder säkra estetiska behandlingar som fillers, botox, PRP & skinboosters. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi." />
-    <meta name="keywords" content="Fillers Solna, Botox Stockholm, PRP behandling Solna, Skinbooster, Polynucleotider, estetisk klinik Solna, Dr. Hadde Beauty, Dr. Hayder Alghazi, hudföryngring, rynkbehandling, legitimerad läkare" />
+    <meta
+      name="description"
+      content="Dr. Hadde Beauty i Solna, Stockholm, erbjuder säkra estetiska behandlingar som fillers, botox, PRP & skinboosters. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi."
+    />
+    <meta
+      name="keywords"
+      content="Fillers Solna, Botox Stockholm, PRP behandling Solna, Skinbooster, Polynucleotider, estetisk klinik Solna, Dr. Hadde Beauty, Dr. Hayder Alghazi, hudföryngring, rynkbehandling, legitimerad läkare"
+    />
     <link rel="canonical" href="https://www.drhaddebeauty.se" />
 
     <!-- Open Graph / Facebook Meta Tags -->
-    <meta property="og:title" content="Fillers, Botox & PRP i Solna, Stockholm | Dr. Hadde Beauty" />
-    <meta property="og:description" content="Säkra estetiska behandlingar som fillers, botox & PRP i Solna. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi för naturliga resultat." />
-    <meta property="og:image" content="https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630" />
+    <meta
+      property="og:title"
+      content="Fillers, Botox & PRP i Solna, Stockholm | Dr. Hadde Beauty"
+    />
+    <meta
+      property="og:description"
+      content="Säkra estetiska behandlingar som fillers, botox & PRP i Solna. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi för naturliga resultat."
+    />
+    <meta
+      property="og:image"
+      content="https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630"
+    />
     <meta property="og:url" content="https://www.drhaddebeauty.se" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="sv_SE" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Fillers, Botox & PRP i Solna, Stockholm | Dr. Hadde Beauty" />
-    <meta name="twitter:description" content="Säkra estetiska behandlingar som fillers, botox & PRP i Solna. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi för naturliga resultat." />
-    <meta name="twitter:image" content="https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630" />
+    <meta
+      name="twitter:title"
+      content="Fillers, Botox & PRP i Solna, Stockholm | Dr. Hadde Beauty"
+    />
+    <meta
+      name="twitter:description"
+      content="Säkra estetiska behandlingar som fillers, botox & PRP i Solna. Boka en konsultation med legitimerad läkare Dr. Hayder Alghazi för naturliga resultat."
+    />
+    <meta
+      name="twitter:image"
+      content="https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630"
+    />
 
     <!-- Schema.org JSON-LD for Rich Snippets -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "MedicalClinic",
-      "name": "Dr. Hadde Beauty",
-      "image": "https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=800",
-      "@id": "https://www.drhaddebeauty.se",
-      "url": "https://www.drhaddebeauty.se",
-      "telephone": "+46-000-123-45-67",
-      "priceRange": "$$",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Klinikgatan 123",
-        "addressLocality": "Solna",
-        "addressRegion": "Stockholm",
-        "postalCode": "16979",
-        "addressCountry": "SE"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 59.3662,
-        "longitude": 17.9897
-      },
-      "founder": {
-        "@type": "Person",
-        "name": "Dr. Hayder Alghazi",
-        "jobTitle": "Legitimerad Läkare"
-      },
-      "medicalSpecialty": "Dermatology",
-      "availableService": [
-        { "@type": "MedicalProcedure", "name": "Fillers" },
-        { "@type": "MedicalProcedure", "name": "Botulinumtoxin (Botox)" },
-        { "@type": "MedicalProcedure", "name": "PRP (Vampyrbehandling)" },
-        { "@type": "MedicalProcedure", "name": "Skinbooster" },
-        { "@type": "MedicalProcedure", "name": "Polynucleotider" }
-      ]
-    }
+      {
+        "@context": "https://schema.org",
+        "@type": "MedicalClinic",
+        "name": "Dr. Hadde Beauty",
+        "image": "https://images.pexels.com/photos/5215024/pexels-photo-5215024.jpeg?auto=compress&cs=tinysrgb&w=800",
+        "@id": "https://www.drhaddebeauty.se",
+        "url": "https://www.drhaddebeauty.se",
+        "telephone": "+46-000-123-45-67",
+        "priceRange": "$$",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Klinikgatan 123",
+          "addressLocality": "Solna",
+          "addressRegion": "Stockholm",
+          "postalCode": "16979",
+          "addressCountry": "SE"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 59.3662,
+          "longitude": 17.9897
+        },
+        "founder": {
+          "@type": "Person",
+          "name": "Dr. Hayder Alghazi",
+          "jobTitle": "Legitimerad Läkare"
+        },
+        "medicalSpecialty": "Dermatology",
+        "availableService": [
+          { "@type": "MedicalProcedure", "name": "Fillers" },
+          { "@type": "MedicalProcedure", "name": "Botulinumtoxin (Botox)" },
+          { "@type": "MedicalProcedure", "name": "PRP (Vampyrbehandling)" },
+          { "@type": "MedicalProcedure", "name": "Skinbooster" },
+          { "@type": "MedicalProcedure", "name": "Polynucleotider" }
+        ]
+      }
     </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
